# FigWizz

./: .env.example  .gitignore  404.html  JUSTFILE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: index.md
.github/workflows/: docs.yml  publish.yml
api/reference/: index.html
figwizz/: __init__.py  colors.py  convert.py  display.py  generate.py  modify.py  scrape.py  stitch.py  stitchkit.py  webkit.py
figwizz/utils/: __init__.py  environ.py  images.py
figwizz/workflows/: __init__.py  icons.py
installation/: index.html
quickstart/: index.html
scripts/: convert_images.py  convert_presentation.py  create_hexicons.py  download_figures.py  preview_docs.py
search/: search_index.json
testing/: conftest.py  pytest.ini  test_colors.py  test_convert.py  test_display.py  test_environ.py  test_genai.py  test_image_utils.py  test_modify.py  test_scrape.py  test_stitchkit.py  test_utils.py  test_webkit.py  test_workflows.py
webdocs/: figure_ops.md  index.md  installation.md  quickstart.md
webdocs/api/: reference.md
webdocs/workflows/: genai.md  icons.md  image_conversion.md  image_modification.md  presentations.md  scraping.md
workflows/genai/: index.html
workflows/icons/: index.html
workflows/image_conversion/: index.html
workflows/image_modification/: index.html
workflows/presentations/: index.html
workflows/scraping/: index.html
