[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figwizz"
version = "0.1.0"
description = "Toolkit for programmatic figure design"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-only"
authors = [
    { name = "Colin Conwell", email = "colinconwell@gmail.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]

dependencies = [
    "ipython>=8.0.1",
    "pillow>=9.0.0",
    "python-pptx>=0.6.21",
    "pybtex>=0.24.0",
    "cairosvg>=2.7.0",
    "PyMuPDF>=1.22.5",
    "tqdm>=4.62.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "isort>=5.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["figwizz*"]